Took 2 hours to fix a simple error which was caused by a + smh, Pushed Nav Bar

--- a/Frontend/Kotlin/MainProject/app/src/main/res/values/strings.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">My Application</string>
     <string name="projectz">PROJECT ZTERLING</string>
     <string name="readbtn">Start Reading</string>
-    <string name="quote">\"See your truth\"</string>
+    <string name="quote">See your truth</string>
+    <string name="name">John Doe</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
+<!--    <string name="drawerLayout" type="id">drawerLayout</string>-->
+    <string name="actvity_1">Actvity 1</string>
 </resources>
