--- a/Frontend/Kotlin/MainProject/app/src/main/res/values/strings.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Project Zterling</string>
     <string name="projectz">PROJECT ZTERLING</string>
     <string name="readbtn">Start Reading</string>
     <string name="quote">See your truth</string>
-    <string name="name">John Doe</string>
+    <string name="name">Menu</string>
     <string name="open">open</string>
     <string name="close">close</string>
-<!--    <string name="drawerLayout" type="id">drawerLayout</string>-->
+    <!--    <string name="drawerLayout" type="id">drawerLayout</string>-->
     <string name="actvity_1">Actvity 1</string>
+    <string name="actvity_2">Project Z</string>
 </resources>
