Pasath activity Updated with info and layout

--- a/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="howto_step3">fill this with step 3</string>
     <string name="enterwebsite">Enter your news website</string>
     <string name="true_false">_tf</string>
+    <string name="todo">TODO</string>
+    <string name="Pasath_Info">Name:Pasath Bandara Email: pasath.20200280@iit.ac.lk ID:20200280</string>
 </resources>
