Saicharan Activity layout and component changed Error fixed

--- a/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="true_false">_tf</string>
     <string name="todo">TODO</string>
     <string name="Pasath_Info">Name:Pasath Bandara Email: pasath.20200280@iit.ac.lk ID:20200280</string>
+    <string name="Saicharan_Info">Name:Saicharan Gnanapiragasam Email: saicharan.20210655@iit.ac.lk ID: 20210655</string>
 </resources>
