Chamal Details activity updated and layout set Error Fixed

--- a/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="todo">TODO</string>
     <string name="Pasath_Info">Name:Pasath Bandara Email: pasath.20200280@iit.ac.lk ID:20200280</string>
     <string name="Saicharan_Info">Name:Saicharan Gnanapiragasam Email: saicharan.20210655@iit.ac.lk ID: 20210655</string>
-    <string name="Manith_Info">Name:Manith Paranawithana Email: manith.20210457@iit.ac.lk ID: 20210457</string>
+    <string name="Manith_Info">Name:Manith Paranawithana        Email: manith.20210457@iit.ac.lk ID: 20210457</string>
+    <string name="Chamal_Info">Name:Chamal Silva                       Email: chamal.20210884@iit.ac.lk ID: 20210884</string>
 </resources>
