yasindu Activity Created and layout set Error Fixed Waiting for the Picture to be set once received

--- a/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="Saicharan_Info">Name:Saicharan Gnanapiragasam Email: saicharan.20210655@iit.ac.lk ID: 20210655</string>
     <string name="Manith_Info">Name:Manith Paranawithana        Email: manith.20210457@iit.ac.lk ID: 20210457</string>
     <string name="Chamal_Info">Name:Chamal Silva                       Email: chamal.20210884@iit.ac.lk ID: 20210884</string>
+    <string name="todo_">TODO</string>
+    <string name="Yasindu_Info">Name:Yasindu Weerathunga Email: yasindu.20211263@iit.ac.lk ID: 20211263</string>
 </resources>
