Designing main view

--- a/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="Chamal_Info">Name:Chamal Silva                       Email: chamal.20210884@iit.ac.lk ID: 20210884</string>
     <string name="todo_">TODO</string>
     <string name="Yasindu_Info">Name:Yasindu Weerathunga Email: yasindu.20211263@iit.ac.lk              ID: 20211263</string>
+    <string name="project_zterling">Project Zterling</string>
+    <string name="todologo">TODO</string>
 </resources>
